--- a/SA2 - Game Mania/css/style.css
+++ b/SA2 - Game Mania/css/style.css
@@ -33,29 +33,29 @@ header {
 
 }
 
-.logo img{
+.logo img {
     width: 180px;
     height: 95px;
     display: flex;
     align-items: center;
 }
 
-.busca img{
+.busca img {
     width: 350px;
     height: auto;
 }
 
-.conta img{
+.conta img {
     width: 48px;
     height: auto;
 }
 
-.favorito img{
+.favorito img {
     width: 48px;
     height: auto;
 }
 
-.sacola img{
+.sacola img {
     width: 48px;
     height: auto;
 }
@@ -68,24 +68,14 @@ header {
 }
 
 
-.banner-tarja {
-    padding: 50px;
+.banners-tarja {
     display: flex;
-    justify-content: space-around;
-    align-items: stretch;
-    height: 300px;
-    
-}
-
-.secao-minibanner {
-    background-color: white;
-}
-
-.minibanner {
-    display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding-top: 50px;
+}
+
+.mini-banner {
+    display: flex;
+    justify-content: space-between;
 }
 
 .secao-destaques {
@@ -99,26 +89,26 @@ header {
 
 .bloco-destaque {
     width: 100%;
-    height: 100%;    
+    height: 100%;
 }
 
-.bloco-destaque h2{
-    font-size: 50px;   
+.bloco-destaque h2 {
+    font-size: 50px;
 }
 
-.content-news{
+.content-news {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    margin-top: 25px;       
+    margin-top: 25px;
 }
 
 
 .produtos {
     width: 250px;
     height: 350px;
-    color: white;       
+    color: white;
 }
 
 .produtos img {
@@ -130,52 +120,78 @@ header {
     flex-direction: column;
 }
 
-.rodape{
+.rodape {
     display: flex;
     justify-content: space-between;
     padding: 50px;
-    background-color: #C0C0C0;   
+    background-color: #C0C0C0;
 }
 
-.links h2{
+.links h2 {
     font-size: 25px;
 }
-.links a{
+
+.links a {
     color: black;
     text-decoration: none;
     font-size: 15px;
 }
-.links-footer{
+
+.links-footer {
     display: flex;
     justify-content: space-between;
-    width: 40px;        
+    width: 40px;
 }
-.newsletter h2{
+
+.newsletter h2 {
     font-size: 14px;
-    margin-bottom: 8px;    
+    margin-bottom: 8px;
 }
-.newsletter form{
+
+.newsletter form {
     display: flex;
     margin-bottom: 8px;
 }
-.newsletter input[type="email"]{
+
+.newsletter input[type="email"] {
     height: 37px;
     width: 195px;
 }
-,.newsletter input[type="email"]::placeholder{
+
+.newsletter input[type="email"]::placeholder {
     color: #808080;
     font-weight: bold;
 }
-button{
+
+button {
     width: 156px;
     color: white;
     background-color: #ef7b21;
     border: none;
     font-size: 18px;
 }
-.redes-sociais{
+
+.redes-sociais {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 8px;
+}
+
+@media screen and (max-width: 1200px) {
+    .container-grid {
+        width: 80%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container-grid {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .container-grid {
+        width: 50%;
+    }
 }
