--- a/SA2 - Game Mania/css/style.css
+++ b/SA2 - Game Mania/css/style.css
@@ -33,29 +33,29 @@ header {
 
 }
 
-.logo img{
+.logo img {
     width: 180px;
     height: 95px;
     display: flex;
     align-items: center;
 }
 
-.busca img{
+.busca img {
     width: 350px;
     height: auto;
 }
 
-.conta img{
+.conta img {
     width: 48px;
     height: auto;
 }
 
-.favorito img{
+.favorito img {
     width: 48px;
     height: auto;
 }
 
-.sacola img{
+.sacola img {
     width: 48px;
     height: auto;
 }
@@ -68,24 +68,15 @@ header {
 }
 
 
-.banner-tarja {
-    padding: 50px;
+.banners-tarja {
     display: flex;
-    justify-content: space-around;
-    align-items: stretch;
-    height: 300px;
-    
-}
-
-.secao-minibanner {
-    background-color: white;
+    justify-content: space-between;
 }
 
 .minibanner {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 50px;
+    justify-content: space-between; 
+    width: 100vw;   
 }
 
 .secao-destaques {
@@ -97,85 +88,164 @@ header {
     justify-content: space-between;
 }
 
-.bloco-destaque {
-    width: 100%;
-    height: 100%;    
+
+.produto1 img {
+    top: 50px;
+    margin: 10%;
+} 
+
+.produto2 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto3 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto4 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto5 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto6 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto7 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto8 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto9 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto10 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto11 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto12 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto13 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto14 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto15 img {
+    top: 50px;
+    margin: 10%;
+}
+.produto16 img {
+    top: 50px;
+    margin: 10%;
+}
+.bloco-destaque h2 {
+    font-size: 50px;
 }
 
-.bloco-destaque h2{
-    font-size: 50px;   
-}
-
-.content-news{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 25px;       
-}
 
 
-.produtos {
-    width: 250px;
-    height: 350px;
-    color: white;       
-}
-
-.produtos img {
-    max-width: 60px;
-    width: 200px;
-    height: 100px;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-}
-
-.rodape{
+.rodape {
     display: flex;
     justify-content: space-between;
     padding: 50px;
-    background-color: #C0C0C0;   
+    padding-top: 50px;
+    background-color: #C0C0C0;
 }
 
-.links h2{
+.links h2 {
     font-size: 25px;
 }
-.links a{
+
+.links a {
     color: black;
     text-decoration: none;
     font-size: 15px;
 }
-.links-footer{
+
+.links-footer {
     display: flex;
     justify-content: space-between;
-    width: 40px;        
+    width: 40px;
 }
-.newsletter h2{
+
+.newsletter h2 {
     font-size: 14px;
-    margin-bottom: 8px;    
+    margin-bottom: 8px;
 }
-.newsletter form{
+
+.newsletter form {
     display: flex;
     margin-bottom: 8px;
 }
-.newsletter input[type="email"]{
+
+.newsletter input[type="email"] {
     height: 37px;
     width: 195px;
 }
-,.newsletter input[type="email"]::placeholder{
+
+.newsletter input[type="email"]::placeholder {
     color: #808080;
     font-weight: bold;
 }
-button{
+
+button {
     width: 156px;
     color: white;
     background-color: #ef7b21;
     border: none;
     font-size: 18px;
 }
-.redes-sociais{
+
+.redes-sociais {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 8px;
+}
+
+@media screen and (max-width: 1200px) {
+    .container-grid {
+        width: 80%;
+    }
+    .banners-tarja {
+        width: 80%;
+    }
+   
+    
+}
+
+@media screen and (max-width: 768px) {
+    .container-grid {
+        width: 60%;
+    }
+    .banners-tarja {
+        width: 60%;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .container-grid {
+        width: 50%;
+    }
+    .banners-tarja {
+        width: 50%;
+        align-items: center;
+    }
 }
