--- a/SA2 - Game Mania/css/style.css
+++ b/SA2 - Game Mania/css/style.css
@@ -67,6 +67,15 @@ header {
     background-size: cover;
 }
 
+#carrosel img{
+    display: none;
+}
+
+
+.banner-ativo{
+    display: flex;
+}
+
 .banners-tarja {
     display: flex;
     justify-content: space-between;
@@ -154,8 +163,17 @@ header {
 }
 .bloco-destaque h2 {
     font-size: 50px;
+    text-decoration: none;    
 }
 
+.bloco-destaque a{
+    background-color: #ef7b21;
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 15px;
+    border-radius: 4px;    
+}
 .rodape {
     display: flex;
     justify-content: space-between;
@@ -264,6 +282,10 @@ button {
         text-align: center;
         padding: 15px;
     }
+}
+
+.menu-ativo{
+    display: flex;
 }
 
 
