--- a/SA2 - Game Mania/css/style.css
+++ b/SA2 - Game Mania/css/style.css
@@ -71,7 +71,6 @@ header {
     display: none;
 }
 
-
 .banner-ativo{
     display: flex;
 }
@@ -174,12 +173,36 @@ header {
     padding: 15px;
     border-radius: 4px;    
 }
+
+.login-input{
+    cursor:pointer;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+    display: flex;
+    margin-bottom: 2%;
+    width: 300px;
+    text-align: center;
+}
+.login-container{
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+}
+
+.login-container h2{
+    margin-bottom: 3%;
+}
+.entrar{
+    margin-top: 3%;
+    margin-bottom: 3%;
+    width: 100px;
+}
+
 .rodape {
     display: flex;
     justify-content: space-between;
     padding: 50px;    
     background-color: #C0C0C0;
-    margin: 50px;
+    
 }
 
 .links h2 {
