--- a/SA2 - Game Mania/css/style.css
+++ b/SA2 - Game Mania/css/style.css
@@ -23,6 +23,7 @@ header {
     width: auto;
     display: flex;
     justify-content: space-around;
+    background-color: #C0C0C0;
 }
 
 .menu a {
@@ -77,7 +78,7 @@ header {
 
 .banners-tarja {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between;   
 }
 
 .minibanner {
@@ -171,7 +172,7 @@ header {
     text-decoration: none;
     text-transform: uppercase;
     padding: 15px;
-    border-radius: 4px;    
+    border-radius: 4px;      
 }
 
 .login-input{
@@ -180,7 +181,8 @@ header {
     display: flex;
     margin-bottom: 2%;
     width: 300px;
-    text-align: center;
+    text-align: center;  
+    border-radius: 4%; 
 }
 .login-container{
   flex-direction: column;
@@ -195,6 +197,7 @@ header {
     margin-top: 3%;
     margin-bottom: 3%;
     width: 100px;
+    border-radius: 4%;
 }
 
 .rodape {
@@ -254,6 +257,10 @@ button {
     align-items: center;
     justify-content: space-between;
     margin-top: 15px;
+}
+
+.redes-sociais img{
+    width: 30px;   
 }
 
 
